--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -348,3 +348,14 @@ entrypoint = "./functions/analyze-company/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/analyze-company/*.html" ]
+
+[functions.company-details]
+enabled = true
+verify_jwt = true
+import_map = "./functions/company-details/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/company-details/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/company-details/*.html" ]
