add language function

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -381,3 +381,14 @@ entrypoint = "./functions/campaigns/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/campaigns/*.html" ]
+
+[functions.campaign-language]
+enabled = true
+verify_jwt = true
+import_map = "./functions/campaign-language/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/campaign-language/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/campaign-language/*.html" ]
