--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -392,3 +392,14 @@ entrypoint = "./functions/campaign-language/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/campaign-language/*.html" ]
+
+[functions.analyze-company-result]
+enabled = true
+verify_jwt = true
+import_map = "./functions/analyze-company-result/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/analyze-company-result/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/analyze-company-result/*.html" ]
