--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -469,3 +469,14 @@ entrypoint = "./functions/lead-collection/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/lead-collection/*.html" ]
+
+[functions.analyze-company-result-save]
+enabled = true
+verify_jwt = true
+import_map = "./functions/analyze-company-result-save/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/analyze-company-result-save/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/analyze-company-result-save/*.html" ]
