--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -480,3 +480,14 @@ entrypoint = "./functions/analyze-company-result-save/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/analyze-company-result-save/*.html" ]
+
+[functions.campaign-leads]
+enabled = true
+verify_jwt = true
+import_map = "./functions/campaign-leads/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/campaign-leads/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/campaign-leads/*.html" ]
