--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -491,3 +491,14 @@ entrypoint = "./functions/campaign-leads/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/campaign-leads/*.html" ]
+
+[functions.lead-insights]
+enabled = true
+verify_jwt = true
+import_map = "./functions/lead-insights/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/lead-insights/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/lead-insights/*.html" ]
