add template email generation function

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -513,3 +513,14 @@ entrypoint = "./functions/campaign-leads-save/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/campaign-leads-save/*.html" ]
+
+[functions.email-generation]
+enabled = true
+verify_jwt = true
+import_map = "./functions/email-generation/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/email-generation/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/email-generation/*.html" ]
