--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -535,3 +535,25 @@ entrypoint = "./functions/lead-insights-3/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/lead-insights-3/*.html" ]
+
+[functions.lead-insights-4]
+enabled = true
+verify_jwt = true
+import_map = "./functions/lead-insights-4/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/lead-insights-4/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/lead-insights-4/*.html" ]
+
+[functions.lead-insights-5]
+enabled = true
+verify_jwt = true
+import_map = "./functions/lead-insights-5/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/lead-insights-5/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/lead-insights-5/*.html" ]
