update prompts and add job retry

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -568,3 +568,14 @@ entrypoint = "./functions/lead-insights-1/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/lead-insights-1/*.html" ]
+
+[functions.retry-jobs]
+enabled = true
+verify_jwt = true
+import_map = "./functions/retry-jobs/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/retry-jobs/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/retry-jobs/*.html" ]
