--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -579,3 +579,14 @@ entrypoint = "./functions/retry-jobs/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/retry-jobs/*.html" ]
+
+[functions.clear-cron-logs]
+enabled = true
+verify_jwt = true
+import_map = "./functions/clear-cron-logs/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/clear-cron-logs/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/clear-cron-logs/*.html" ]
